# ABM_Framework_Comparisons

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  netlogo_flock.sh  netlogo_s.sh  runall.sh
Agents/: benchmark.jl  flocking.jl  schelling.jl
FLAMEGPU2/: CMakeLists.txt  README.md  benchmark.py
FLAMEGPU2/src/: boids2D.cu  schelling.cu
Mesa/Flocking/: benchmark.py
Mesa/ForestFire/: benchmark.py
Mesa/Schelling/: benchmark.py  model.py
Mesa/WolfSheep/: benchmark.py
NetLogo/: netlogo-headless.sh
NetLogo/Flocking/: Flocking.nlogo  config.xml
NetLogo/Schelling/: Segregation.nlogo
pyflamegpu/: .gitignore  benchmark.py
pyflamegpu-agentpy/: README.md  benchmark.py
pyflamegpu-agentpy/src/: boids2D.py  schelling.py
pyflamegpu/src/: boids2D.py  schelling.py
repast4py/: .gitignore  README.md  benchmark.py  draw_agent.py
repast4py/src/flocking/: flocking.py  params.yaml
repast4py/src/schelling/: params.yaml  schelling.py
